--- a/Lab1/style.css
+++ b/Lab1/style.css
@@ -15,7 +15,7 @@ main{
 .section-box{
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2.5em;
+  font-size: 2em;
   background: linear-gradient(90deg, rgba(71, 223, 211,1) 0%, rgba(255,255,255,1) 50%, rgba(71, 223, 211,1) 100%);
 }
 
@@ -30,14 +30,19 @@ main{
 }
 
 .section-basic{
-  text-align: center;
-  font-size: 1em;
-  background-color: rgba(0, 0, 0, 0)
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0);
+  width: 25%;
 }
+
 
 .listing{
   text-align: center;
   font-size: 1em;
+  width: 75%;
+  border: 3px solid black;
 }
 
 .row {
@@ -49,19 +54,25 @@ main{
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(6, 1fr); 
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .grid-item {
   padding: 10px;
   text-align: center;
+  border: 1px solid black;
 }
 
 .grid-item-header{
   padding: 10px;
+  border: 1px solid black;
   text-align: center;
   font-weight: bold;
   font-size: 1.5em;
+}
+
+h2{
+  font-size: 2em;
 }
 
 input{
