--- a/Lab1/style.css
+++ b/Lab1/style.css
@@ -21,7 +21,7 @@ main{
 
 .top-buttons{
   text-align: right;
-  background-color: rgba(89, 34, 117, 0.75);
+  background-color: rgba(86, 91, 167, 0.75);
 }
 
 .search-bar{
@@ -41,7 +41,7 @@ main{
 .listing{
   text-align: center;
   font-size: 1em;
-  width: 75%;
+  width: 50%;
   border: 3px solid black;
 }
 
@@ -75,6 +75,11 @@ h2{
   font-size: 2em;
 }
 
+li{
+  font-size: 1.2em;
+}
+
+
 input{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;
@@ -101,7 +106,7 @@ button{
 }
 
 button:hover{
-  background-color: cadetblue;
+  background-color: rgb(117, 117, 196); 
 }
 
 body{
